--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,11 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">Dressme</a>
+        <%= link_to 'DressMe', root_url, class: 'brand' %>
         <div class="nav-collapse">
           <ul class="nav">
 
-            <li><%= link_to "Home", "/" %></li>
+            <li><%= link_to "Home", "/users" %></li>
             <li><%= link_to "Users", "/users" %></li>
             <li><%= link_to "Dress Codes", "/dress_codes" %></li>
             <li><%= link_to "Shirt Tops", "/shirt_tops" %></li>
