--- a/app/views/shirt_tops/new.html.erb
+++ b/app/views/shirt_tops/new.html.erb
@@ -29,6 +29,11 @@
   </div>
 
   <div>
+    <%= label_tag :outfit_id %><br />
+    <%= text_field_tag :outfit_id %>
+  </div>
+
+  <div>
     <%= submit_tag "Create Shirt/Top" %>
   </div>
 <% end %>
