--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,13 @@
   <title>Dressme</title>
 
   <%= stylesheet_link_tag    "application", :media => "all" %>
-
-
-  <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/simplex/bootstrap.min.css" rel="stylesheet">
-
-  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+
+  <link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/simplex/bootstrap.min.css" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="http://code.jquery.com/ui/1.10.3/themes/cupertino/jquery-ui.css">
+
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
@@ -33,13 +32,15 @@
             <li><%= link_to "Home", "/outfits" %></li>
             <li><%= link_to "Users", "/users" %></li>
             <li><%= link_to "Random", "/outfits1" %></li>
-            <li><%= link_to "Custom", "/outfits3" %></li>
+            <li><%= link_to "Custom", "/outfits/new" %></li>
             <li><%= link_to "Outfits", "/outfits2" %></li>
             <li><%= link_to "Shirt Tops", "/shirt_tops1" %></li>
             <li><%= link_to "Pants", "/pants1" %></li>
             <li><%= link_to "Shoes", "/shoes1" %></li>
             <li><%= link_to "Dress Codes", "/dress_codes" %></li>
-            <li><a href="#about">About</a></li>
+            <li><%= link_to "Blog", "/posts" %></li>
+            <li><%= link_to "Comments", "comments" %></li>
+            <li><%= link_to "About", "/about" %></li>
 
           </ul>
         </div>
@@ -56,7 +57,6 @@
     <% else %>
       <%= link_to "Sign In", new_session_url %>
       <% end %>
-
 
     <% flash.each do |name, msg| %>
       <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
