--- a/app/views/shoes/index2.html.erb
+++ b/app/views/shoes/index2.html.erb
@@ -2,7 +2,7 @@
 
 <p><%= link_to 'Add a New Shoe', new_shoe_url %></p>
 
-<table>
+<table class="table table-bordered table-hover">
   <thead>
     <tr>
       <th>Image</th>
