--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -1,36 +1,50 @@
-<h1>Outfits</h1>
+ <script>
+    $(function() {
+     $(".selectable").click(function() {
+       $(this).toggleClass('ui-selected');
+     });
+    });
+ </script>
 
-<p><%= link_to 'Add a New Outfit', new_outfit_url %></p>
+   <style>
+  .ui-selected { border: 5px solid blue; }
+  </style>
 
+
+<h2>Randomize a New Outfit</h2>
+
+<p><%= link_to 'Or Click Here to Customize a New Outfit', new_outfit_url %></p>
+
+ <%= form_tag(outfits1_url, :method => :get) do %>
 <table>
   <thead>
     <tr>
-      <th>The Shirt/Top you should wear:</th>
-      <th>The Pants you should wear:</th>
-      <th>The Shoes you should wear:</th>
+      <th><h4>The Shirt/Top you should wear:</h4></th>
+      <th><h4>The Pants you should wear:</h4></th>
+      <th><h4>The Shoes you should wear:</h4></th>
     </tr>
   </thead>
 
   <tbody>
-  <%# @outfits.each do |outfit| %>
     <tr>
-      <td><%= image_tag @shirt_top.image_url, width: 300 %></td>
-      <p><%#= button_tag '<i class="icon-check-empty"></i>'.html_safe %></p>
-      <td><%= image_tag @pant.image_url, width: 300 %></td>
-      <td><%= image_tag @shoe.image_url, width: 300 %></td>
+      <td>
+        <%= check_box_tag :shirt_top_id, @shirt_top.id %>
+        <%= label_tag "shirt_top_id_#{@shirt_top.id}", (image_tag @shirt_top.image_url, width: 300, class: "index_img selectable") %></td>
 
-      <td><%#= link_to 'Show', outfit_url(outfit) %></td>
-      <td><%#= link_to 'Edit', edit_outfit_url(outfit) %></td>
-      <td><%#= link_to 'Destroy', outfit_url(outfit), method: 'delete', data: { confirm: "Do you really want to delete this outfit?" } %></td>
+      <td><%= check_box_tag :pant_id, @pant.id %>
+        <%= label_tag "pant_id_#{@pant.id}", (image_tag @pant.image_url, width: 300, class: 'index_img selectable') %></td>
 
+      <td><%= check_box_tag :shoe_id, @shoe.id %>
+        <%= label_tag "shoe_id_#{@shoe.id}", (image_tag @shoe.image_url, width: 300, class: 'index_img selectable') %></td>
     </tr>
-  <%# end %>
   </tbody>
 </table>
+<h4><%= submit_tag "Or else click the item(s) you like and continue to randomize the rest!", :class => 'btn'  %></h4>
+    <% end %>
 
-<%#= render 'new_outfit_form', :@outfit => Outfit.new %>
+<h4><%= link_to "Yes, I'll wear the whole outfit; save it!", outfits_url(:outfit=>{:shirt_top_id => @shirt_top.id, :pant_id => @pant.id, :shoe_id => @shoe.id}), method: :post, :class => 'btn' %></h4>
+<h4><%= button_tag link_to "Give me an entire new combo.", method: :index, :class => 'btn' %></h4>
 
 
-<%= link_to "Yes, I'll wear the whole outfit; save it!", outfits_url(:shirt_top_id => @shirt_top.id, :pant_id => @pant.id, :shoe_id => @shoe.id), method: :post   %>
-<%= link_to "Give me an entire new combo.", method: :index %>
-<p>Or else click the item(s) you like and continue to randomize the rest!</p>
+
+
