--- a/app/views/outfits/new.html.erb
+++ b/app/views/outfits/new.html.erb
@@ -1,11 +1,71 @@
-<h1>New Outfit</h1>
+<h2>Customize a New Outfit</h2>
 
-<%#= form_for @outfit do |outfit| %>
-  <%#= outfit.shirt_top_id%>
-  <%#= outfit.pant_id %>
-  <%#= outfit.shoe_id %>
-
-  <div>
-    <%= submit_tag "Create Outfit" %>
+<%= form_for @outfit do |o| %>
+  <h3>Pick a Shirt:</h3>
+  <div class = "selectable">
+    <% ShirtTop.all.each do |shirt_top| %>
+      <div class="shirt-tops">
+        <%= o.radio_button :shirt_top_id, shirt_top.id, style: "display: none" %>
+        <%= o.label "shirt_top_id_#{shirt_top.id}", (image_tag shirt_top.image_url, width: 173, class: 'item-img') %>
+      </div>
+    <% end %>
+    <div class="clearfix"></div>
   </div>
-<%# end %>
+
+  <h3>Pick a Pant:</h3>
+    <div class = "selectable">
+      <% Pant.all.each do |pant| %>
+        <div class='pants'>
+          <%= o.radio_button :pant_id, pant.id, style: "display: none"  %>
+          <%= o.label "pant_id_#{pant.id}", (image_tag pant.image_url, width: 173, class: 'item-img') %>
+        </div>
+      <% end %>
+      <div class="clearfix"></div>
+   </div>
+
+  <h3>Pick a Shoe:</h3>
+  <div class = "selectable">
+    <% Shoe.all.each do |shoe| %>
+      <div class = 'shoes'>
+        <%= o.radio_button :shoe_id, shoe.id, style: "display: none"  %>
+        <%= o.label "shoe_id_#{shoe.id}", (image_tag shoe.image_url, width: 173, class: 'item-img') %>
+      </div>
+    <% end %>
+    <div class="clearfix"></div>
+  </div>
+
+<br>
+
+  <%= o.submit 'Create Outfit', :class => 'btn'  %>
+
+<% end %>
+
+ <script>
+   $(function() {
+    $(".shirt-tops").click(function() {
+      $(".shirt-tops").removeClass("ui-selected");
+      $(this).addClass('ui-selected');
+    });
+   });
+
+   $(function() {
+    $(".pants").click(function() {
+      $(".pants").removeClass("ui-selected");
+      $(this).addClass('ui-selected');
+       });
+   });
+
+  $(function() {
+    $(".shoes").click(function() {
+      $(".shoes").removeClass("ui-selected");
+      $(this).addClass('ui-selected');
+        });
+   });
+   </script>
+
+   <style>
+  .selectable .ui-selected { border: 4px solid green; }
+  </style>
+
+
+
