reset config for heroku deployment

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -11,6 +11,11 @@
     </div>
   <% end %>
 
+<div>
+  <%#= c.label :post_id %>
+  <%#= c.text_area :post_id, post.id %>
+</div>
+
   <div>
   <%= c.label :name %>
   <%= c.text_area :name %>
