--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
         <div class="nav-collapse">
           <ul class="nav">
 
-            <li><%= link_to "Home", "/outfits" %></li>
+            <li><%= link_to "Home", "/outfits1" %></li>
             <li><%= link_to "Users", "/users" %></li>
             <li><%= link_to "Random", "/outfits1" %></li>
             <li><%= link_to "Custom", "/outfits/new" %></li>
@@ -39,7 +39,7 @@
             <li><%= link_to "Shoes", "/shoes1" %></li>
             <li><%= link_to "Dress Codes", "/dress_codes" %></li>
             <li><%= link_to "Blog", "/posts" %></li>
-            <li><%= link_to "Comments", "comments" %></li>
+            <li><%#= link_to "Comments", "comments" %></li>
             <li><%= link_to "About", "/about" %></li>
 
           </ul>
