--- a/app/views/outfits/new.html.erb
+++ b/app/views/outfits/new.html.erb
@@ -1,4 +1,5 @@
 <h2>Customize a New Outfit</h2>
+<%= link_to "<button>Random</button>".html_safe, outfits1_url, :id => "button_id", :class => "button_class" %>
 
 <%= form_for @outfit do |o| %>
   <h3>Pick a Shirt:</h3>
