--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
       <i class="icon-facebook icon-large blog_icons"></i>
       <i class="icon-google-plus icon-large blog_icons"></i>
       <i class="icon-twitter icon-large blog_icons"></i>
-      <%= link_to "Comments", posts_url, class: "float" %>
+      <%= link_to "Comments", post, class: "float" %>
       </div>
 
 <br><br>
