--- a/app/views/outfits/index.html.erb
+++ b/app/views/outfits/index.html.erb
@@ -12,8 +12,7 @@
 
 
 <h2>Randomize a New Outfit</h2>
-
-<p><%= link_to 'Or Click Here to Customize a New Outfit', new_outfit_url %></p>
+<%= link_to "<button>Custom</button>".html_safe, new_outfit_url, :id => "button_id", :class => "button_class" %>
 
  <%= form_tag(outfits1_url, :method => :get) do %>
 <table>
