--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -18,7 +18,7 @@
       <i class="icon-facebook icon-large blog_icons"></i>
       <i class="icon-google-plus icon-large blog_icons"></i>
       <i class="icon-twitter icon-large blog_icons"></i>
-      <% link_text = "#{post.comments.count} #{pluralize(post.comments.count,
+      <% link_text = "#{pluralize(post.comments.count,
 'Comment')}" %>
         <%= link_to link_text, post, class: "float" %>
 
