--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,7 +12,8 @@
       <h4>Authored by: <%= post.author %></h4>
       <br>
       <%= post.body %>
-
+      <br>
+      <%= image_tag post.blog_post_pics.url %>
 <br><br>
       <div class = "border">
       <i class="icon-facebook icon-large blog_icons"></i>
