--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -11,6 +11,8 @@
 
   <%= @post.body %>
 
+  <%= image_tag @post.blog_post_pics.url %>
+
 <br><br>
   <div class = "border">
       <i class="icon-facebook icon-large blog_icons"></i>
