--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@post, :url => posts_path, :html => {:multipart => true}) do |p| %>
+<%= form_for(@post) do |p| %>
   <% if @post.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
@@ -35,6 +35,11 @@
 </div>
 
 <br>
+
+<div class="field">
+  <%= p.label :tag_list %>
+  <%= p.text_field :tag_list %>
+</div>
 
 <div class="actions">
   <%= p.submit %>
