--- a/app/views/shoes/new.html.erb
+++ b/app/views/shoes/new.html.erb
@@ -3,6 +3,10 @@
 
 <%= form_tag(shoes_url, method: 'post') do %>
 
+   <div>
+    <%= hidden_field :user_id, current_user.id  %>
+  </div>
+
   <div>
     <%= label_tag :image_url, 'Image URL' %><br />
     <%= text_field_tag :image_url %>
