outfits for current_user

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -14,7 +14,7 @@
   <% end %>
 
 <div>
-  <%= c.text_field :post_id, :value => @post.id %>
+  <%= c.hidden_field :post_id, :value => @post.id %>
 </div>
 
   <div>
